--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "19.0.0",
+    "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "lucide-react": "0.460.0",
     "wouter": "3.3.5",
